--- a/assets/gallery/manifest.json
+++ b/assets/gallery/manifest.json
@@ -3,7 +3,8 @@
     "snowy_zoe.png",
     "reading_nori.png",
     "princess_nori.png",
-    "ferris.png",
-    "spa.png"
+    "spa.png",
+    "ferris.png"
   ]
 }
+
